package application;

public interface IPacGomme {

    int taille = 5;
    String couleur = "jaune";

    public int getTaille();

    public String getCouleur(); 
    
}
