package application;

public class PacGommeNormal implements IPacGomme {

    public PacGommeNormal(){}
    
    public int getTaille(){
        return taille;
    }
    public String getCouleur(){
        return couleur;
    } 

}
