@startuml Application


class Labyrinthe {
    + heros: PacMan
    + ennemies : IPacGomme
}

class PacMan {
    - instance : PacMan
    getInstance() : PacMan
}

class PacGommeFactory  {
    - count: int
    getPacGomme() : IPacGomme
}

interface IPacGomme {
    + taille : int
    + couleur : string
    getTaille() : int
    getCouleur() : string
}

class PacGommeNormal  {
}

class PacGommeBoost  {
}

Labyrinthe ..|> PacMan : uses
Labyrinthe ..|> PacGommeFactory : uses
IPacGomme <|.. PacGommeNormal
IPacGomme <|.. PacGommeBoost


@enduml